Wed Apr 11 14:01:31 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* docs/deprecation.rst: Remove documentation of the "#define
	  XAPIAN_DEPRECATED(D) D" hack, and clarify documentation on how
	  long we support deprecated functions.

Wed Apr 11 09:25:55 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* docs/Makefile.am,docs/deprecation.rst: Add initial draft of
	  deprecation policy document, with list of all API items currently
	  marked for deprecation.
	* HACKING: Add note about keeping deprecation.rst up-to-date when
	  making a release.

Tue Apr 10 19:07:24 BST 2007  Olly Betts <olly@survex.com>

	* configure.ac: --enable-quiet now uses AS_HELP_STRING.

Tue Apr 10 18:53:32 BST 2007  Olly Betts <olly@survex.com>

	* tests/harness/index_utils.cc: Return the empty document we already
	  have rather than constructing another.

Tue Apr 10 17:45:11 BST 2007  Olly Betts <olly@survex.com>

	* net/remoteconnection.cc: Fix typo in comment.

Tue Apr 10 17:35:57 BST 2007  Olly Betts <olly@survex.com>

	* tests/harness/backendmanager.cc: Fix "if" to "is" typo in 3
	  comments.

Tue Apr 10 16:46:09 BST 2007  Olly Betts <olly@survex.com>

	* tests/harness/backendmanager.cc: Define XAPIAN_TCPSRV and
	  XAPIAN_PROGSRV under UNIX too, and use them everywhere.

Tue Apr 10 16:33:48 BST 2007  Olly Betts <olly@survex.com>

	* tests/harness/backendmanager.h: Remove "BackendManager::" from
	  method declaration.

Tue Apr 10 15:35:50 BST 2007  Olly Betts <olly@survex.com>

	* configure.ac: Define HAVE_SOCKETPAIR if we have socketpair().

Tue Apr 10 15:29:49 BST 2007  Olly Betts <olly@survex.com>

	* net/progclient.cc: Fix #endif placement so it compiles on UNIX.

Tue Apr 10 14:18:06 BST 2007  Olly Betts <olly@survex.com>

	* net/remoteconnection.cc: Remove debugging code.

Tue Apr 10 12:57:51 BST 2007  Olly Betts <olly@survex.com>

	* backends/dbfactory_remote.cc,common/progclient.h,net/progclient.cc,
	  net/remoteconnection.cc,tests/api_db.cc,tests/apitest.cc,