@@ -1,3 +1,8 @@
+Wed Apr 11 21:13:31 BST 2007  Olly Betts <olly@survex.com>
+
+	* tests/api_db.cc,tests/quartztest.cc: Rework quartztest's "open1"
+	  into API level tests for quartz and flint in apitest.
+
 Wed Apr 11 14:01:31 BST 2007  Richard Boulton <richard@lemurconsulting.com>
 
 	* docs/deprecation.rst: Remove documentation of the "#define
